log
Fri Mar 11 17:31:31 HSP 2022: 
 tests:  0|7
total_score: 0/70
091d26d
Fri Mar 11 19:48:04 HSP 2022: 
 tests:  0|7
total_score: 0/70
e107357
Fri Mar 11 21:53:19 HSP 2022: 
 tests:  0|7
total_score: 0/70
2d3d692
Fri Mar 11 22:12:56 HSP 2022: 
 tests:  0|7
total_score: 0/70
eb9242b
Fri Mar 11 22:18:28 HSP 2022: 
 tests:  0|7
total_score: 0/70
ba963ab
Fri Mar 11 22:20:36 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
0252475
Fri Mar 11 22:22:18 HSP 2022: 
 tests:  1|6
total_score: 10/70
fc93963
Fri Mar 11 22:28:50 HSP 2022: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
f03d703
Fri Mar 11 22:30:02 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
62ae2fa
Fri Mar 11 22:49:34 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'asignarValor':
exercises.c:87:8: error: incompatible types when assigning to type 'Vector {aka struct <anonymous>}' from type 'int'
    v[i]=valor;
        ^
Compilation failed
e2fab0a
Fri Mar 11 22:53:04 HSP 2022: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'obtenerValor':
exercises.c:98:9: error: incompatible types when assigning to type 'int' from type 'Vector {aka struct <anonymous>}'
    valor=v[i];
         ^
Compilation failed
119f607
Fri Mar 11 22:59:19 HSP 2022: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaV':
exercises.c:107:16: error: invalid operands to binary + (have 'Vector {aka struct <anonymous>}' and 'Vector {aka struct <anonymous>}')
       c[i]=a[i]+b[i]
            ~~~~^~~~~
exercises.c:108:4: error: expected ';' before '}' token
    }
    ^
exercises.c: In function 'obtenerValor':
exercises.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5186b71
